--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,23 @@
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #131516;
+  background-color: #0b1216;
   overflow-x: hidden;
   color: white;
  /* background-image: url('../test.png'); */
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
+}
+
+.navbar{
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0), rgb(0, 0, 0),  rgb(0, 0, 0));
+	width:100%;
+  bottom:0px;
+  height: 200px;
+  top:0px;
+  position: fixed;
+  z-index:1;
 }
 
 section{
@@ -69,9 +79,9 @@ header h1 {
   width: 100vw !important;
   height: 100vh !important;
   position: absolute;
-  top: -5em;
+  top: -35em;
   left: 0;
-  
+  z-index:0;
 }
 
 .hidden{
@@ -79,6 +89,7 @@ header h1 {
   filter: blur(5px);
   transform: translateX(-100%);
   transition: all 1s;
+  z-index:0;
 }
 
 .show{
