--- a/css/style.css
+++ b/css/style.css
@@ -107,9 +107,14 @@ header h1 {
 
 .box{
   width: 70%;
+  margin-bottom: 10em;
 }
 
 .wrapper{
   flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
 }
 }
