--- a/css/style.css
+++ b/css/style.css
@@ -107,14 +107,23 @@ header h1 {
 
 .box{
   width: 70%;
+  height:20em;
   margin-bottom: 10em;
 }
 
 .wrapper{
+  margin: 5em;
   flex-direction: column;
   align-items: center;
   align-content: center;
   justify-content: center;
   justify-items: center;
 }
+
+#container3D canvas {
+  width: 75vw !important;
+  height: 75vh !important;
+
+}
+
 }
