--- a/css/style.css
+++ b/css/style.css
@@ -123,11 +123,7 @@ header h1 {
 #container3D canvas {
   width: 75vw !important;
   height: 75vh !important;
-  
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  justify-items: center;
+  margin-left: 5em;
 }
 
 }
