--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #060b0e;
+  background-color: #131618;
   overflow-x: hidden;
   color: white;
  /* background-image: url('../test.png'); */
@@ -107,7 +107,6 @@ header h1 {
 
 .rear{
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(0, 0, 0),  rgb(0, 0, 0));
-  padding: 20px;
 }
 
 @media all and (max-width: 800px) { 
@@ -130,6 +129,13 @@ header h1 {
   justify-items: center;
 }
 
+.hidden{
+  margin-bottom: -5em;
+}
 
+#container3D canvas {
+  width: 80vw !important;
+  height: 80vh !important;
+}
 
 }
