--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@ header h1 {
 
 
 .rear{
+  bottom:0px;
+  padding: 10px;
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(0, 0, 0),  rgb(0, 0, 0));
 }
 
@@ -136,6 +138,7 @@ header h1 {
 #container3D canvas {
   width: 80vw !important;
   height: 80vh !important;
+  left: 35px;
 }
 
 }
