--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-color: #131618;
+  background-color: #27323a;
   overflow-x: hidden;
   color: white;
  /* background-image: url('../test.png'); */
