--- a/css/style.css
+++ b/css/style.css
@@ -185,9 +185,11 @@ header h1 {
 #container3D canvas {
   width: 90vw !important;
   height: 90vh !important;
-  left: 34px;
-  margin-bottom: -10em;
-  margin-top: 10em;
+  height:50%;
+  width:50%;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
 }
 
 }
