--- a/css/style.css
+++ b/css/style.css
@@ -182,12 +182,13 @@ header h1 {
 }
 
 #container3D canvas {
-  width: 75vw !important;
-  height: 50vh !important;
+  width: 50% !important;
+  height: 50% !important;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
-  margin-top: -3em;
+  margin-top: -4em;
+  margin-bottom: 4em;;
 }
 
 }
