--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,7 @@ header h1 {
 }
 
 .wrapper{
+  display:none;
   margin: 1em;
   flex-direction: column;
   align-items: center;
@@ -182,8 +183,8 @@ header h1 {
 }
 
 #container3D canvas {
-  width: 100% !important;
-  height: 100% !important;
+  width: 70vw !important;
+  height: 70vh !important;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
