--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,9 @@ header h1 {
   transform: translateX(0);
 }
 
+.mobileWrap{
+  display:none;
+}
 
 .rear{
   bottom:0px;
@@ -156,6 +159,7 @@ header h1 {
   height: 150px;
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(0, 0, 0),  rgb(0, 0, 0));
 }
+
 
 @media all and (max-width: 800px) { 
 .navbar h1{
@@ -170,6 +174,15 @@ header h1 {
 
 .wrapper{
   display:none;
+  margin: 1em;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+}
+
+.mobileWrap{
   margin: 1em;
   flex-direction: column;
   align-items: center;
