--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ header h1 {
 }
 
 .mobileWrap{
+  display: block;
   margin: 1em;
   flex-direction: column;
   align-items: center;
@@ -196,8 +197,8 @@ header h1 {
 }
 
 #container3D canvas {
-  width: 70vw !important;
-  height: 70vh !important;
+  width: 75vw !important;
+  height: 75vh !important;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
