--- a/css/style.css
+++ b/css/style.css
@@ -182,8 +182,8 @@ header h1 {
 .mobileWrap{
   display: flex;
   margin: 2em;
-  margin-top: 10em;
-  margin-bottom: -15em;
+  margin-top: 5em;
+  margin-bottom: -10em;
   padding: 1em 2em;
   flex-direction: column;
   align-items: center;
@@ -203,7 +203,8 @@ header h1 {
   left: 50%;
   translate: -50% -50%;
   margin-top: -5em;
-  margin-bottom: 10em;;
+  margin-bottom: 10em;
+  overflow-x: visible;
 }
 
 }
