--- a/css/style.css
+++ b/css/style.css
@@ -255,12 +255,13 @@ header h1 {
 }
 
 #container3D canvas {
-  width: 100vw !important;
-  height: 100vh !important;
+  width: 90vw !important;
+  height: 90vh !important;
   top: 50%;
   left: 50%;
   translate: -50% -50%;
-  margin-bottom: 5em;
+  margin-top: 3em;
+  margin-bottom: 8em;
   overflow-x: visible;
 }
 
