--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 :root{
-  --primary-color: #030b11;
-  --hover-color: #272832;
+  --primary-color: #070813;
+  --hover-color: #2d2e38;
   --accent-color: #0071FF;
   --text-color: #c9c9c9;
 }
@@ -31,12 +31,12 @@ body {
   height: 200px;
   top:0px;
   position: fixed;
-  z-index:1;
+  z-index:10;
   
 }
 
 .navbar h1{
-  filter: drop-shadow(0 0 0px rgb(204, 202, 240)) drop-shadow(0 0 0px rgb(204, 202, 240)) drop-shadow(0 0 10px rgb(204, 202, 240));
+  filter: drop-shadow(0 0 0px rgb(198, 196, 238)) drop-shadow(0 0 0px rgb(201, 199, 240)) drop-shadow(0 0 10px rgb(201, 198, 240));
   font-family:Copperplate,Copperplate Gothic Light,fantasy; 
   font-weight: 100;
 }
@@ -55,7 +55,7 @@ section{
   margin-top: 0em;
   margin-bottom: 0em ;
   border-bottom: double;
-  border-color: #c9c9c9;
+  border-color: #bec0c494;
   padding: 4em;
 
 }
@@ -225,6 +225,8 @@ header h1 {
 .generalText{
   margin-left: 0em;
 }
+
+
 
 .box{
   width: 90%;
