--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 :root{
   --primary-color: #0d0e14;
-  --hover-color: #2d2e38;
+  --hover-color: #caceff25;
   --accent-color: #0071FF;
   --text-color: #c9c9c9;
 }
@@ -24,21 +24,94 @@ body {
  user-select: none; /* Standard syntax */
 }
 
+.drop{
+  display: none;
+  translate: 20px -70px;
+}
+.navbar button{
+  background: none; /* Removes background color */
+    border: none;     /* Removes border */
+    padding: 0;       /* Removes padding */
+    margin: 0;        /* Removes margin */
+    box-shadow: none; /* Removes any box shadow */
+    outline: none;    /* Removes outline */
+}
+
+.navbar img{
+  width: 100px;
+}
+
 .navbar{
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0), rgb(0, 0, 0),  rgb(0, 0, 0));
+  background-color: var(--primary-color);
 	width:100%;
+  height: 100px;
   bottom:0px;
-  height: 200px;
   top:0px;
   position: fixed;
   z-index:10;
+  border-bottom:1px solid;
+  border-color: var(--hover-color);
   
 }
 
-.navbar h1{
+.navbar ul{
+  list-style: none;
+  display: flex;
+  translate: 0em -100px;
+
+}
+
+
+.navbar a{
+  display: flex;
+  text-decoration: none;
+  color: var(--text-color);
+  transition: background-color 150ms ease;
+  padding: 0em 1.25em;
+  padding-top: 85px;
+  padding-bottom: 35px;
+  translate: 0em -43px;
+  
+  
+}
+
+.navbar .home-li{
+  margin-right: auto;
+}
+
+.home-li{
+  margin-left: -2em;
+
+}
+
+.home-li a{
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.navbar a:hover{
+  background-color: var(--hover-color);
+}
+
+.navbar a.active-link{
+  border-bottom: 2px solid var(--text-color);
+}
+
+.navbar a.accent-link{
+  background-color: var(--accent-color);
+}
+
+header {
+  text-align: center;
+  color: white;
+  
+}
+
+header h1{
   filter: drop-shadow(0 0 0px rgb(198, 196, 238)) drop-shadow(0 0 0px rgb(201, 199, 240)) drop-shadow(0 0 10px rgb(201, 198, 240));
   font-family:Copperplate,Copperplate Gothic Light,fantasy; 
   font-weight: 100;
+  font-size: 2.5em;
 }
 
 
@@ -46,22 +119,22 @@ section{
   display: grid;
   place-items: center;
   align-content: center;
-
   
 }
 
 .generalsec{
   margin: 2%;
-  margin-top: 0em;
+  margin-top: -30em;
   margin-bottom: 0em ;
   border-bottom: double;
-  border-color: #bec0c494;
-  padding: 4em;
+  border-color: var(--hover-color);
+  padding-bottom: 4em;
+  translate: 0em 9em;
+
 
 }
 
 .general{
-  margin-top: 1em;
   display: flex;
   flex-direction: row;
   
@@ -192,30 +265,29 @@ section{
   display:none;
 }
 
-header {
-  margin-top: 1em;
-  text-align: center;
-  color: white;
-  font-size: 200%;
-}
-
-header h1 {
-  font-size: 2em;
-  font-weight: 900;
-}
-
 .rear{
   bottom:0px;
   padding: 10px;
   height: 150px;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgb(0, 0, 0),  rgb(0, 0, 0));
+  background-color: var(--primary-color);
+  border-top: 1px solid var(--hover-color);
 }
 
-
-@media all and (max-width: 800px) { 
+@media all and (max-width: 1055px) { 
 
 .navbar h1{
   font-size: 30px;
+}
+
+.navbar{
+  height: 75px;
+}
+
+.navbar a{
+  padding-right: 0.35em;
+  padding-left: 0.35em;
+  padding-top: 100px;
+  padding-bottom: 20px;
 }
 
 .general{
@@ -277,5 +349,51 @@ header h1 {
 .mobileTest{
   margin-top: 80em;
 }
+
+}
+
+@media all and (max-width: 850px) { 
+  .navbar h1{
+    font-size: 24px;
+  }
+
+  .drop{
+    display: block;
+    
+  }
+
+  .navbar a.accent-link{
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .navbar a.accent-link:hover{
+    background-color: var(--hover-color);
+  }
+  .navbar a.active-link{
+    border-bottom: none;
+    
+    
+  } 
+  .home-li{
+    margin-left: 0px;
+    width: 200px;
+    
+  }
+  .navbar a{
+    padding: 10px;
+    border: solid 1px var(--hover-color);
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 200px;
+    translate: -3em;
+  }
+
+
+  .navbar ul{
+    flex-direction: column;
+    width: 100px;
+    margin-left: 2em;
+  }
+
+
 
 }
