--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .temp{
-
+  height:100px;
   translate: 0em -100px;
 }
 .navbar button{
@@ -364,7 +364,7 @@ section{
 
   #drop{
     display: block;
-    translate: 20px -70px;
+    translate: 20px 0px;
     
   }
 
@@ -398,7 +398,7 @@ section{
     flex-direction: column;
     width: 100px;
     margin-left: 2em;
-    translate: 0em -100px;
+    translate: 0em -30px;
   }
 
   #list{
@@ -411,6 +411,11 @@ section{
 
   .temp{
     translate: 0em 0px;
+
+    width: 120px;
+    height: 90px;
+    translate: 0px -70px;
+
   }
 
   header h1{
