--- a/css/style.css
+++ b/css/style.css
@@ -331,8 +331,10 @@ section{
 }
 
 .founder{
-  padding-left: 5em;
-  padding-right: 5em;
+  align-items: center;
+  justify-content: center;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 .founder p{
