--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ section{
 .generalButtons{
   display: flex;
   flex-direction: row;
-  margin-left: 3em;
+  margin-left: 2.5em;
 }
 
 .generalButtons button{
@@ -503,7 +503,7 @@ section{
   margin: 2em;
   margin-top: -8em;
   margin-bottom: -10em;
-  padding: 1em 2em;
+  padding: 1em 0.5em;
   flex-direction: column;
   align-items: center;
   align-content: center;
@@ -612,10 +612,25 @@ section{
   }
 
   .container{
-    width: 92%;
+    width: 100%;
+    margin-left: -1em;
   }
 
+@media all and (max-width: 400px){
+  .navbar h1{
+    font-size: 20px;
+  }
+  .temp{
+    translate: -1.1em -60px;
+  }
 
+  header h1{
+    text-align: end;
+    margin-right: 0.2em;
+    translate: 0em 0.6em;
+  }
+
+}
 
 
 }
