--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,7 @@ section{
 
 .contact-input{
   padding: 0.5em;
+  padding-bottom: 1em;
   margin-top: 0.25em;
   margin-bottom: 2em;
   margin-left: 0.5em;
