--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 
 @font-face {
     font-family: 'Copperplate Gothic';
-    src: url('CopperplateGothicBT-Roman.woff2') format('woff2'),
-        url('CopperplateGothicBT-Roman.woff') format('woff');
+    src: url('OPTICopperplate-Light.woff2') format('woff2'),
+        url('OPTICopperplate-Light.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -139,7 +139,7 @@ header h1{
   filter: drop-shadow(0 0 0px rgb(198, 196, 238)) drop-shadow(0 0 0px rgb(201, 199, 240)) drop-shadow(0 0 10px rgb(201, 198, 240));
   font-family:'Copperplate Gothic'; 
   font-weight: 100;
-  font-size: 2.5em;
+  font-size: 2.15em;
 }
 
 
@@ -484,7 +484,7 @@ section{
 @media all and (max-width: 1150px) { 
 
 .navbar h1{
-  font-size: 30px;
+  font-size: 26px;
 }
 
 .navbar{
@@ -577,7 +577,7 @@ section{
 
 @media all and (max-width: 850px) { 
   .navbar h1{
-    font-size: 24px;
+    font-size: 21px;
   }
 
   #drop{
