--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 :root{
-  --primary-color: #0d0e14;
-  --hover-color: #caceff25;
-  --accent-color: #5b5dff;
+  --primary-color: #08080c;
+  --hover-color: #a4acff25;
+  --accent-color: #4043e7;
   --text-color: #c9c9c9;
 }
 
@@ -201,9 +201,9 @@ section{
   padding: 0.5em;
   background-color: var(--primary-color);
   font-weight: 800;
-  color: #7f8288; 
+  color: #6b758a; 
   font-size:large; 
-  border: 3px solid #7f8288;
+  border: 3px solid #6b758a;
   cursor:pointer;
 }
 
@@ -228,7 +228,7 @@ section{
   flex-direction: column;
   margin: 15px;
   width: 20%;
-  background-color: rgb(53, 56, 61);
+  background-color: rgb(73, 77, 85);
   border-radius: 15px;
   line-height: 20px;
   text-align: justify;
@@ -258,7 +258,7 @@ section{
 .box:hover::after, .box:hover::before{
   padding: 3px;
   border-radius: 15px;
-  background-image: conic-gradient(from var(--angle), transparent, rgb(208, 219, 240));
+  background-image: conic-gradient(from var(--angle), transparent, rgb(178, 202, 245));
   animation: 3s spin linear infinite;
 }
 
