--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,18 @@ section{
 
 }
 
+@media screen and (min-width: 2000px) and (min-height: 1100px) {
+  /* Styles for large monitors like 32" screens */
+  #container3D canvas{
+    margin-top: 8em;
+    
+  }
+
+  .general{
+    margin-top: 8em;
+  }
+}
+
 @media all and (max-width: 850px) { 
   .navbar h1{
     font-size: 17.5px;
