--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ section{
   flex-direction: column;
   margin: 15px;
   width: 20%;
-  background-color: rgb(73, 77, 85);
+  background-color: #535366;
   border-radius: 15px;
   line-height: 20px;
   text-align: justify;
@@ -480,6 +480,65 @@ section{
   color: #5b5dff;
 }
 
+.quad{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.quad *{
+  margin: 1em;
+  width: 20em;
+  height: 20em;
+}
+
+.card{
+  text-decoration: none;
+  color: var(--text-color);
+  padding: 1em;
+  background-color: #5353666c;
+  text-align: center;
+  translate: 0em 0em;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.card:hover{
+  background-color: #535366a2;
+  border-style: solid;
+  border-width: 1px;
+  border-color:#c9c9c996;
+  transform: scale(1.1);
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+}
+
+.card img{
+  width: 80%;
+  height: auto;
+  filter: grayscale(100%);
+  position: absolute;
+  margin-top: 1.5em;
+}
+
+.card:hover img{
+  filter: grayscale(0%);
+}
+
+.hand{
+  translate: 0em 14em;
+  width: 100%;
+  height:55em;
+  margin-bottom: 5em;
+  background: center/cover url("../hand3.png") no-repeat;
+  align-items: center;
+  justify-content: center;
+  
+}
 
 @media all and (max-width: 1150px) { 
 
@@ -573,6 +632,28 @@ section{
   
 }
 
+.quad{
+  flex-wrap: wrap;
+}
+
+.quad *{
+  margin: 0.5em;
+  width: 10em;
+  height: 10em;
+}
+
+  .hand{
+    height:40em;
+    translate: 0em 20em;
+  }
+
+  
+
+  .card{
+    translate: 0em 0em;
+  }
+
+
 }
 
 @media screen and (min-width: 2000px) and (min-height: 1100px) {
@@ -664,6 +745,25 @@ section{
     margin-left: -1em;
   }
 
+  .quad *{
+  margin: 0.3em;
+  width: 9em;
+  height: 9em;
+  
+  }
+
+  .hand{
+    height:30em;
+  }
+
+  .card{
+    translate: 0em -11em;
+    font-size: 14px;
+    padding: 0.5em;
+  }
+
+}
+
 @media all and (max-width: 380px){
   .navbar h1{
     font-size: 15.75px;
@@ -672,13 +772,24 @@ section{
     translate: -1.1em -60px;
   }
 
-  header h1{
+  .header h1{
     text-align: end;
     margin-right: 0.2em;
     translate: 0em 0.6em;
   }
 
+  .quad *{
+  margin: 0.3em;
+  width: 7.5em;
+  height: 7.5em;
+  
+  }
+
+  .hand{
+    height:30em;
+  }
+
+  
 }
 
-
-}
+  
