--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
         url('OPTICopperplate-Light.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: block;
 }
 
 html{
